--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 <body>
     <!--Navigation Bar-->
     <header>
-        <h1 href="/"> Will's Porftolio</h1>
+        <h1>
+            <a href="/"> Will York</a>
+        </h1> 
+        <nav>
+        <ul>
+            <li>
+                <a href="#about-me">About Me</a>
+            </li>
+            <li>
+                <a href= "#work">My Work</a>
+            </li>
+            <li>
+                <a href="#contact-me">Contact Me</a>
+            </li>
+        </ul>
+    </nav>
     </header>
+
+    <footer>
+        <h2>Made by Will York</h2>
+    </footer>
 </body>
