updated img and footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </nav>
     </header>
 
+<!-- Footer-->
     <footer>
-        <h2>Made by Will York</h2>
+        <h2>2021 Will York.</h2>
     </footer>
 </body>
