added html layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 </html>
 <body>
-    <!--Navigation Bar-->
+<!--Navigation Bar-->
     <header>
         <h1>
             <a href="/"> Will York</a>
@@ -27,6 +27,27 @@
         </ul>
     </nav>
     </header>
+
+<!-- Aboue Me-->
+    <article id="about-me">
+        <div>
+            <h2> About Me </h2>
+        </div>
+    </article>
+
+<!--My Work-->
+    <section id="work">
+        <div>
+            <h2> My Work</h2>
+        </div>
+    </section>
+    
+<!--contact me-->
+    <section id="contact-me">
+        <div>
+            <h2> Contact Me</h2>
+        </div>
+    </section>
 
 <!-- Footer-->
     <footer>
