added personal image

--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
     </nav>
     </header>
 
+<!--Hero-->
+<section class=hero>
+    <div>
+        
+    </div>
+</section>
+
+
 <!-- Aboue Me-->
-    <article id="about-me">
+    <article id="about-me" class="about">
         <div>
             <h2> About Me </h2>
         </div>
