attempting to align header and hero

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </header>
 
 <!--Hero-->
-<section class=hero>
+<section class="hero">
     <div>
-        
+       <h2> Welcome </h2>
     </div>
 </section>
 
@@ -39,6 +39,7 @@
 <!-- Aboue Me-->
     <article id="about-me" class="about">
         <div>
+            <img src="./assets/images/WY headshot.jpeg" alt="Will Y Headshot">
             <h2> About Me </h2>
         </div>
     </article>
