--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <!-- Aboue Me-->
     <article id="about-me" class="about">
-        <div>
+        <div class="about-me">
             <img src="./assets/images/WY headshot.jpeg" alt="Will Y Headshot">
             <h2> About Me </h2>
         </div>
