updated header and hero

--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
 <!--Hero-->
 <section class="hero">
     <div>
-       <h2> Welcome </h2>
+       <h2 class="welcome"> Welcome! </h2>
     </div>
 </section>
 
 
 <!-- Aboue Me-->
     <article id="about-me" class="about">
+        <h2> About Me </h2>
         <div class="about-me">
             <img src="./assets/images/WY headshot.jpeg" alt="Will Y Headshot">
-            <h2> About Me </h2>
+            
         </div>
     </article>
 
@@ -55,6 +56,8 @@
     <section id="contact-me">
         <div>
             <h2> Contact Me</h2>
+            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque dolor quam fugit aspernatur, accusantium repellendus voluptas autem dolorum eius reprehenderit, culpa aliquid! Natus praesentium non reprehenderit repudiandae optio eos laudantium.</p>
+            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque dolor quam fugit aspernatur, accusantium repellendus voluptas autem dolorum eius reprehenderit, culpa aliquid! Natus praesentium non reprehenderit repudiandae optio eos laudantium.</p>
         </div>
     </section>
 
