--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <h2> About Me </h2>
         <div class="about-me">
             <img src="./assets/images/WY headshot.jpeg" alt="Will Y Headshot">
-            
+            <p>
+                Hello! My name is Will York and welcome to my website. Since a young age I have thoroughly enjoyed using technology to make life easier and more exciting. Through my professional career I have focused on selling technology to help others accomplish this. I am now embarking on a journey into the world of full stack development so that I can develop my own tools that accomplish these goals! 
+            </p>
         </div>
     </article>
 
@@ -56,8 +58,9 @@
     <section id="contact-me">
         <div>
             <h2> Contact Me</h2>
-            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque dolor quam fugit aspernatur, accusantium repellendus voluptas autem dolorum eius reprehenderit, culpa aliquid! Natus praesentium non reprehenderit repudiandae optio eos laudantium.</p>
-            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque dolor quam fugit aspernatur, accusantium repellendus voluptas autem dolorum eius reprehenderit, culpa aliquid! Natus praesentium non reprehenderit repudiandae optio eos laudantium.</p>
+            <p> 804-380-1536</p>
+            <p><a href= mailto:w.york63@gmail.com>w.york63@gmail.com</a></p>
+            <p><a href="https://github.com/wyork63" target="_blank">Will's GitHub</a></p>
         </div>
     </section>
 
