updated about me

--- a/index.html
+++ b/index.html
@@ -41,26 +41,35 @@
         <h2> About Me </h2>
         <div class="about-me">
             <img src="./assets/images/WY headshot.jpeg" alt="Will Y Headshot">
-            <p>
-                Hello! My name is Will York and welcome to my website. Since a young age I have thoroughly enjoyed using technology to make life easier and more exciting. Through my professional career I have focused on selling technology to help others accomplish this. I am now embarking on a journey into the world of full stack development so that I can develop my own tools that accomplish these goals! 
+            <p class="bio"> 
+                Hello! My name is Will York and welcome to my website. Since a young age I have thoroughly enjoyed using technology to make life easier and more exciting. Through my professional career I have focused on selling technology to help others accomplish this. 
+            <br>
+            I am now embarking on a journey into the world of full stack development so that I can develop my own tools that accomplish these goals! 
             </p>
         </div>
     </article>
 
+<br>
 <!--My Work-->
     <section id="work">
         <div>
             <h2> My Work</h2>
         </div>
     </section>
-    
+<br>
 <!--contact me-->
     <section id="contact-me">
-        <div>
-            <h2> Contact Me</h2>
-            <p> 804-380-1536</p>
-            <p><a href= mailto:w.york63@gmail.com>w.york63@gmail.com</a></p>
-            <p><a href="https://github.com/wyork63" target="_blank">Will's GitHub</a></p>
+        <h2> Contact Me</h2>
+        <div class="contact-me">
+            <ul>
+                <li>804-380-1536</li>
+                <li>
+                    <a href= mailto:w.york63@gmail.com>w.york63@gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://github.com/wyork63" target="_blank">Will's GitHub</a></p>
+                </li>    
+            </ul>
         </div>
     </section>
 
