--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!--Hero-->
 <section class="hero">
     <div>
-       <h2 class="welcome"> Welcome! </h2>
+       <h2 class="welcome">Welcome!</h2>
     </div>
 </section>
 
@@ -44,7 +44,8 @@
             <p class="bio"> 
                 Hello! My name is Will York and welcome to my website. Since a young age I have thoroughly enjoyed using technology to make life easier and more exciting. Through my professional career I have focused on selling technology to help others accomplish this. 
             <br>
-            I am now embarking on a journey into the world of full stack development so that I can develop my own tools that accomplish these goals! 
+            <br>
+                I am now embarking on a journey into the world of full stack development so that I can develop my own tools that accomplish these goals! 
             </p>
         </div>
     </article>
@@ -58,7 +59,7 @@
     </section>
 <br>
 <!--contact me-->
-    <section id="contact-me">
+    <section id="contact-me" class="contact-one">
         <h2> Contact Me</h2>
         <div class="contact-me">
             <ul>
