--- a/index.html
+++ b/index.html
@@ -55,7 +55,33 @@
     <section id="work">
         <div>
             <h2> My Work</h2>
-        </div>
+        </div>   
+        <div class="work-pics">
+            <div class="work-big">
+            <section>
+                <img src="./assets/images/RunBuddy-project.png" alt="run buddy"
+                    width="1000"
+                    height="600"/>
+                <p> Run Buddy Project</p>
+            </section>
+            </div>  
+            <section class="work-normal">
+                <img src="./assets/images/placeholder 1.png" alt="placeholder" />
+                <p> Place Holder </p>
+            </section>
+            <section class="work-normal">
+                <img src="./assets/images/placeholder 2.png" alt="placeholder"/>
+                <p>Placeholder</p> 
+            </section>   
+            <section class="work-normal">
+                <img src="./assets/images/placeholder 3.png" alt="placeholder"/>
+                <p>Placeholder</p> 
+            </section>
+            <section class="work-normal">
+                <img src="./assets/images/placeholder 4.png" alt="placeholder"/>
+                <p>Placeholder</p> 
+            </section> 
+        </div>    
     </section>
 <br>
 <!--contact me-->
