added hover to images

--- a/index.html
+++ b/index.html
@@ -59,26 +59,37 @@
         <div class="work-pics">
             <div class="work-big">
             <section>
-                <img src="./assets/images/RunBuddy-project.png" alt="run buddy"
+                <a href="https://wyork63.github.io/run-buddy/" target="_blank">
+                    <img src="./assets/images/RunBuddy-project.png" alt="run buddy"
                     width="1000"
                     height="600"/>
+                </a>
+                    
                 <p> Run Buddy Project</p>
             </section>
             </div>  
             <section class="work-normal">
-                <img src="./assets/images/placeholder 1.png" alt="placeholder" />
+                <a href="https://www.google.com/" target="_blank">
+                    <img class="border" src="./assets/images/placeholder 1.png" alt="placeholder" />
+                </a>
                 <p> Place Holder </p>
             </section>
             <section class="work-normal">
-                <img src="./assets/images/placeholder 2.png" alt="placeholder"/>
+                <a href="https://www.google.com/" target="_blank">
+                    <img class="border" src="./assets/images/placeholder 2.png" alt="placeholder"/>
+                </a>
                 <p>Placeholder</p> 
             </section>   
             <section class="work-normal">
-                <img src="./assets/images/placeholder 3.png" alt="placeholder"/>
+                <a href="https://www.google.com/" target="_blank">
+                    <img class="border" src="./assets/images/placeholder 3.png" alt="placeholder"/>
+                </a>
                 <p>Placeholder</p> 
             </section>
             <section class="work-normal">
-                <img src="./assets/images/placeholder 4.png" alt="placeholder"/>
+                <a href="https://www.google.com/" target="_blank">
+                    <img  class= "border" src="./assets/images/placeholder 4.png" alt="placeholder"/>
+                </a>
                 <p>Placeholder</p> 
             </section> 
         </div>    
