added tags to work

--- a/index.html
+++ b/index.html
@@ -64,33 +64,33 @@
                     width="1000"
                     height="600"/>
                 </a>
-                    
                 <p> Run Buddy Project</p>
             </section>
             </div>  
             <section class="work-normal">
                 <a href="https://www.google.com/" target="_blank">
                     <img class="border" src="./assets/images/placeholder 1.png" alt="placeholder" />
+                    <div class="bottom-left">Placeholder</div>
                 </a>
-                <p> Place Holder </p>
             </section>
             <section class="work-normal">
                 <a href="https://www.google.com/" target="_blank">
-                    <img class="border" src="./assets/images/placeholder 2.png" alt="placeholder"/>
+                    <img  class="border" src="./assets/images/placeholder 2.png" alt="placeholder"/>
+                    <div class="bottom-left">Placeholder</div>
                 </a>
-                <p>Placeholder</p> 
+                
             </section>   
             <section class="work-normal">
                 <a href="https://www.google.com/" target="_blank">
                     <img class="border" src="./assets/images/placeholder 3.png" alt="placeholder"/>
-                </a>
-                <p>Placeholder</p> 
+                    <div class="bottom-left">Placeholder</div>
+                </a> 
             </section>
             <section class="work-normal">
                 <a href="https://www.google.com/" target="_blank">
                     <img  class= "border" src="./assets/images/placeholder 4.png" alt="placeholder"/>
+                    <div class="bottom-left">Placeholder</div>
                 </a>
-                <p>Placeholder</p> 
             </section> 
         </div>    
     </section>
