messed around with images

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 </section>
 
 
-<!-- Aboue Me-->
-    <article id="about-me" class="about">
-        <h2> About Me </h2>
+<!-- About Me-->
+    <article id="about-me" class="title" >
+        <h2>About Me</h2>
         <div class="about-me">
-            <img src="./assets/images/WY headshot.jpeg" alt="Will Y Headshot">
+            <!-- <img src="./assets/images/WY headshot.jpeg" alt="Will Y Headshot"> -->
             <p class="bio"> 
                 Hello! My name is Will York and welcome to my website. Since a young age I have thoroughly enjoyed using technology to make life easier and more exciting. Through my professional career I have focused on selling technology to help others accomplish this. 
             <br>
@@ -53,16 +53,14 @@
 <br>
 <!--My Work-->
     <section id="work">
-        <div>
+        <div class="title">
             <h2> My Work</h2>
         </div>   
         <div class="work-pics">
-            <div class="work-big">
+            <div>
             <section>
                 <a href="https://wyork63.github.io/run-buddy/" target="_blank">
-                    <img src="./assets/images/RunBuddy-project.png" alt="run buddy"
-                    width="1000"
-                    height="600"/>
+                    <img class="work-big" src="./assets/images/RunBuddy-project.png" alt="run buddy">
                 </a>
                 <p> Run Buddy Project</p>
             </section>
@@ -96,7 +94,7 @@
     </section>
 <br>
 <!--contact me-->
-    <section id="contact-me" class="contact-one">
+    <section id="contact-me" class="contact-one title">
         <h2> Contact Me</h2>
         <div class="contact-me">
             <ul>
