added develop branch

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </article>
 
 <br>
-<!--My Work-->
+<!--My Work Old-->
     <section id="work">
         <div class="title">
             <h2> My Work</h2>
@@ -93,6 +93,7 @@
         </div>    
     </section>
 <br>
+
 <!--contact me-->
     <section id="contact-me" class="contact-one title">
         <h2> Contact Me</h2>
