updated my work html

--- a/index.html
+++ b/index.html
@@ -51,47 +51,42 @@
     </article>
 
 <br>
-<!--My Work Old-->
+<!--My Work New-->
     <section id="work">
-        <div class="title">
-            <h2> My Work</h2>
-        </div>   
+        <h2> My Work</h2>   
         <div class="work-pics">
-            <div>
-            <section>
-                <a href="https://wyork63.github.io/run-buddy/" target="_blank">
-                    <img class="work-big" src="./assets/images/RunBuddy-project.png" alt="run buddy">
-                </a>
-                <p> Run Buddy Project</p>
-            </section>
-            </div>  
-            <section class="work-normal">
-                <a href="https://www.google.com/" target="_blank">
-                    <img class="border" src="./assets/images/placeholder 1.png" alt="placeholder" />
-                    <div class="bottom-left">Placeholder</div>
-                </a>
-            </section>
-            <section class="work-normal">
-                <a href="https://www.google.com/" target="_blank">
-                    <img  class="border" src="./assets/images/placeholder 2.png" alt="placeholder"/>
-                    <div class="bottom-left">Placeholder</div>
-                </a>
-                
-            </section>   
-            <section class="work-normal">
-                <a href="https://www.google.com/" target="_blank">
-                    <img class="border" src="./assets/images/placeholder 3.png" alt="placeholder"/>
-                    <div class="bottom-left">Placeholder</div>
-                </a> 
-            </section>
-            <section class="work-normal">
-                <a href="https://www.google.com/" target="_blank">
-                    <img  class= "border" src="./assets/images/placeholder 4.png" alt="placeholder"/>
-                    <div class="bottom-left">Placeholder</div>
-                </a>
-            </section> 
-        </div>    
-    </section>
+            <a href="https://wyork63.github.io/run-buddy/" target="_blank" class="my-work run-buddy">
+                <div>
+                    <h3> Run Buddy</h3>
+                    <span> HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://www.google.com/" target="_blank" class="my-work placeholder-1">
+                <div>
+                    <h3>Placeholder 1</h3>
+                    <span> Some great work</span>
+                </div>
+            </a>    
+            <a href="https://www.google.com/" target="_blank" class="my-work placeholder-2">
+                <div>
+                    <h3>Placeholder 2</h3>
+                    <span>Another great example</span>
+                </div>
+            </a>
+            <a href="https://www.google.com/" target="_blank" class="my-work placeholder-3">
+                <div>
+                    <h3>Placeholder 3</h3>
+                    <span> Look at that, more great work!</span>
+                </div>
+            </a> 
+           <a href="https://www.google.com/" target="_blank" class="my-work placeholder-4">
+                <div>
+                    <h3> Placeholder 4</h3>
+                    <span> One last example, impressive!</span>
+                </div>
+            </a>
+        </div> 
+    </section>  
 <br>
 
 <!--contact me-->
