updating my work css

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <br>
 <!--My Work New-->
-    <section id="work">
+    <section id="work" class="title">
         <h2> My Work</h2>   
         <div class="work-pics">
             <a href="https://wyork63.github.io/run-buddy/" target="_blank" class="my-work run-buddy">
