save css and html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <article id="about-me" class="title">
         <h2>About Me</h2>
         <div class="about-me">
-            <!-- <img src="./assets/images/WY headshot.jpeg" alt="Will Y Headshot"> -->
+            <img src="./assets/images/WY headshot.jpeg" alt="Will Y Headshot">
             <p class="bio"> 
                 Hello! My name is Will York and welcome to my website. Since a young age I have thoroughly enjoyed using technology to make life easier and more exciting. Through my professional career I have focused on selling technology to help others accomplish this. 
             <br>
