--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 Hello! My name is Will York and welcome to my website. Since a young age I have thoroughly enjoyed using technology to make life easier and more exciting. Through my professional career I have focused on selling technology to help others accomplish this. 
             <br>
             <br>
-                I am now embarking on a journey into the world of full stack development so that I can develop my own tools that accomplish these goals! 
+                I currently work at a startup company that focuses on providing easy to use technology for faith based organizations. I am embarking on this journey into the world of full stack development so that I can develop new tools to enhance the companies current technology stack! 
             </p>
         </div>
     </article>
