updated pictures and links

--- a/index.html
+++ b/index.html
@@ -55,34 +55,34 @@
     <section id="work" class="title">
         <h2> My Work</h2>   
         <div class="work-pics">
-            <a href="https://wyork63.github.io/run-buddy/" target="_blank" class="my-work run-buddy">
+            <a href="https://wyork63.github.io/group-six-front-end-project/" target="_blank" class="my-work run-buddy">
                 <div>
-                    <h3> Run Buddy</h3>
-                    <span> HTML and CSS</span>
+                    <h3>WNS Dashboard</h3>
+                    <span>Javascipt, API's, HTML and CSS</span>
                 </div>
             </a>
-            <a href="https://www.google.com/" target="_blank" class="my-work placeholder-1">
+            <a href="https://wyork63.github.io/wills-weather-dashboard/" target="_blank" class="my-work placeholder-1">
                 <div>
-                    <h3>Placeholder 1</h3>
-                    <span> Some great work</span>
+                    <h3>Weather Dashboard</h3>
+                    <span>Weather API</span>
                 </div>
             </a>    
-            <a href="https://www.google.com/" target="_blank" class="my-work placeholder-2">
+            <a href="https://wyork63.github.io/wills-workday-scheduler/" target="_blank" class="my-work placeholder-2">
                 <div>
-                    <h3>Placeholder 2</h3>
-                    <span>Another great example</span>
+                    <h3>Workday Scheduler</h3>
+                    <span>Moment JS</span>
                 </div>
             </a>
-            <a href="https://www.google.com/" target="_blank" class="my-work placeholder-3">
+            <a href="https://wyork63.github.io/Wills-Code-Quiz/" target="_blank" class="my-work placeholder-3">
                 <div>
-                    <h3>Placeholder 3</h3>
-                    <span> Look at that, more great work!</span>
+                    <h3>Coding Quiz</h3>
+                    <span> JS and Local Storage</span>
                 </div>
             </a> 
-           <a href="https://www.google.com/" target="_blank" class="my-work placeholder-4">
+           <a href="https://wyork63.github.io/wills-password-generator/Develop/index.html" target="_blank" class="my-work placeholder-4">
                 <div>
-                    <h3> Placeholder 4</h3>
-                    <span> One last example, impressive!</span>
+                    <h3> Password Generator</h3>
+                    <span> JavaScript</span>
                 </div>
             </a>
         </div> 
