--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     <span>Javascipt, API's, HTML and CSS</span>
                 </div>
             </a>
-            <a href="https://wyork63.github.io/wills-weather-dashboard/" target="_blank" class="my-work placeholder-1">
+            <a href="https://github.com/wyork63/Group-3-FullStack" target="_blank" class="my-work placeholder-1">
                 <div>
-                    <h3>Weather Dashboard</h3>
-                    <span>Weather API</span>
+                    <h3>Travel Blog</h3>
+                    <span>RESTFUL api's</span>
                 </div>
             </a>    
             <a href="https://wyork63.github.io/wills-workday-scheduler/" target="_blank" class="my-work placeholder-2">
