--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <span>Javascipt, API's, HTML and CSS</span>
                 </div>
             </a>
-            <a href="https://github.com/wyork63/Group-3-FullStack" target="_blank" class="my-work placeholder-1">
+            <a href="https://sheltered-peak-50835.herokuapp.com/" target="_blank" class="my-work placeholder-1">
                 <div>
                     <h3>Travel Blog</h3>
                     <span>RESTFUL api's</span>
