final project update

--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
     <section id="work" class="title">
         <h2> My Work</h2>   
         <div class="work-pics">
-            <a href="https://wyork63.github.io/group-six-front-end-project/" target="_blank" class="my-work run-buddy">
+            
+            <a href="https://sole-intentions.herokuapp.com/" target="_blank" class="my-work run-buddy">
                 <div>
-                    <h3>WNS Dashboard</h3>
-                    <span>Javascipt, API's, HTML and CSS</span>
+                    <h3>Sole Intentions</h3>
+                    <span>Full Stack Project</span>
                 </div>
             </a>
             <a href="https://sheltered-peak-50835.herokuapp.com/" target="_blank" class="my-work placeholder-1">
@@ -67,10 +68,10 @@
                     <span>RESTFUL api's</span>
                 </div>
             </a>    
-            <a href="https://wyork63.github.io/wills-workday-scheduler/" target="_blank" class="my-work placeholder-2">
+            <a href="https://wyork63.github.io/group-six-front-end-project/" target="_blank" class="my-work placeholder-2">
                 <div>
-                    <h3>Workday Scheduler</h3>
-                    <span>Moment JS</span>
+                    <h3>WNS Dashboard</h3>
+                    <span>Javascript and APIs</span>
                 </div>
             </a>
             <a href="https://wyork63.github.io/Wills-Code-Quiz/" target="_blank" class="my-work placeholder-3">
