added christmas pl

--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
     </article>
 
 <br>
+<!-- Will's Christmas Playlist-->
+<section id="Christmas" class="title">
+    <h2> Christmas PL</h2>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5DCVusjNpoM53SuEXqoN8d?utm_source=generator" 
+    width="80%" height="380" frameBorder="0" allowfullscreen="" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" l
+    oading="lazy"></iframe>
+
+</section>
 <!--My Work New-->
     <section id="work" class="title">
         <h2> My Work</h2>   
